# docs/swagger.yaml
@@ -53,7 +53,7 @@ paths:
                   type: string
                 role:
                   type: string
-                  enum: [ADMIN, BLOGGER]
+                  enum: [ADMIN, USER]
 
       responses:
         "201":
@@ -82,7 +82,6 @@ paths:
           description: Successful login
         "400":
           description: Invalid credentials
-
   /auth/all:
     get:
       summary: Get all users (admin only)
@@ -94,3 +93,82 @@ paths:
           description: List of users
         "401":
           description: Unauthorized
+  /auth/profile:
+    get:
+      summary: Get your profile
+      tags: [Auth]
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: User Profile
+        "401":
+          description: Unauthorized
+  /auth/updateProfile:
+    put:
+      summary: Update your Profile
+      tags: [Auth]
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+                profileImage:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: Updated Sucesssully
+        "400":
+          description: Update Error
+  /auth/updateuser/{id}:
+    put:
+      summary: Update a user (admin only)
+      tags: [Auth]
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: User ID
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+                role:
+                  type: string
+                  enum: [ADMIN, USER]
+                profileImage:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: User updated successfully
+        "400":
+          description: Bad request
+        "401":
+          description: Unauthorized
+        "404":
+          description: User not found
